@@ -1,5 +1,15 @@
 2008-08-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
 
+	* gst/matroska/matroska-mux.c:
+	(gst_matroska_mux_audio_pad_setcaps):
+	Add support for muxing raw float audio now that the spec defines the
+	endianness and add support for muxing raw integer audio with 24 and
+	32 bits.
+
+	Allow muxing of more than 8 audio channels.
+
+2008-08-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
+
 	* gst/matroska/matroska-mux.c: (gst_matroska_mux_create_uid),
 	(gst_matroska_mux_reset), (gst_matroska_mux_start):
 	Add locking to the global array of used track UIDs to prevent random
